--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "A WeChat like Emoji component for React.js",
   "main": "dist/index.js",
-  "repository": "git@github.com:hexh250786313/react-wechat-emoji.git",
+  "repository": "https://github.com/hexh250786313/react-wechat-emoji.git",
   "author": "Howard He <250786313@qq.com>",
   "license": "MIT",
   "keywords": [
