--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-wechat-emoji",
   "version": "1.0.1",
   "description": "A WeChat like Emoji component for React.js",
-  "main": "dist/index.js",
+  "main": "lib/index.js",
   "repository": "https://github.com/hexh250786313/react-wechat-emoji.git",
   "author": "Howard He <250786313@qq.com>",
   "license": "MIT",
@@ -11,11 +11,32 @@
     "wechat",
     "emoji"
   ],
+  "scripts": {
+    "dev": "react-scripts start",
+    "build": "babel src/Emoji --out-dir lib"
+  },
   "dependencies": {},
   "peerDependencies": {
     "react": "^16.8.0"
   },
   "devDependencies": {
-    "react": "^17.0.1"
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "^4.0.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
