--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.2",
   "description": "A WeChat like Emoji component for React.js",
   "main": "lib/index.js",
+  "typings": "./src/Emoji/index.d.ts",
   "repository": "https://github.com/hexh250786313/react-wechat-emoji.git",
-  "author": "Howard He <250786313@qq.com>",
+  "author": "hexh <250786313@qq.com>",
   "license": "MIT",
   "keywords": [
     "react",
@@ -12,10 +13,32 @@
     "emoji"
   ],
   "scripts": {
-    "dev": "react-scripts start",
-    "build": "babel src/Emoji --out-dir lib"
+    "start": "react-scripts start",
+    "build": "babel src/components/Emoji --out-dir lib"
   },
-  "dependencies": {},
+  "eslintConfig": {
+    "extends": [
+      "react-app"
+    ]
+  },
+  "eslintIgnore": [
+    "*.ts",
+    "node_modules/**/*"
+  ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,cjs,mjs}": [
+      "eslint --fix",
+      "git add"
+    ],
+    "*.{json,md,css,less,sass,scss}": [
+      "git add"
+    ]
+  },
   "peerDependencies": {
     "react": "^16.8.0"
   },
@@ -23,9 +46,13 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.0"
+    "babel-eslint": "10.1.0",
+    "eslint": "7.17.0",
+    "lint-staged": "10.5.3",
+    "husky": "4.3.7",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "react-scripts": "^4.0.1"
   },
   "browserslist": {
     "production": [
